# whpg_dr_sync

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  OPERATIONS.md
packaging/systemd/: whpg_dr_sync-dr.service  whpg_dr_sync-primary.service  whpg_dr_sync.env
scripts/: whpg_dr_sync-dr.service  whpg_dr_sync-primary.service  whpg_dr_sync_export_metrics.sh
src/whpg_dr_sync/: cli.py  common.py  config.py  dr.py  primary.py  service.py  status.py
